# cobra-ops

./: LICENSE  README.md
Exfiltration/t1567-001/: README.md  Taskfile.yml  go.mod  main.go
Exfiltration/t1567-002/: Program.cs  README.md  Taskfile.yml  t1567-002.csproj  t1567-002.py  t1567-002.sln
Exfiltration/t1567-003/: README.md  app.py
Exfiltration/t1567-003/templates/: 404.html  base.html  index.html
Exfiltration/t1567-004/: Cargo.toml  README.MD  makefile
t1567-003/: README.md  app.py  requirements.txt
t1567-003/templates/: 500.html  new_paste.html  view_paste.html
t1567-004/: README.MD
t1567-004/src/: main.rs
