[package]
name = "t1567-004"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
